--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
+<!DOCTYPE html>
 <html>
 <head>
-</head>
+  Manel KHENTOUT
+
+  <style>
+           body {
+             color: blue;
+           }
+        </style>
+  </head>
 <body>
 <h1>Welcom to my site </h1>
   <h2>Manel KHENTOUT</h2>
