--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <html>
 <head>
   Manel KHENTOUT
+  
 
   <style>
            body {
-             color: blue;
+             color: black;
            }
         </style>
   </head>
 <body>
-<h1>Welcom to my site </h1>
-  <h2>Hello</h2>
+<h3>- (+33)6-08-11-04 </h3>
+<h3>- (+33)6-08-11-04 </h3>
+  
 </body>
 </html>
