--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 <html>
 <head>
   Manel KHENTOUT
-  
-
   <style>
            body {
              color: black;
@@ -11,10 +9,10 @@
         </style>
   </head>
 <body>
-<h3>- Tel: (+33)6-08-11-04 </h3>
-<h3>- Email:(+33)6-08-11-04 </h3>
-<h3>- Github: https://github.com/manelkhentout </h3>
-<h3>- LinkedIn: https://www.linkedin.com/in/manel-khentout-226118161/</h3>  
+- Tel: (+33)6-08-11-04 
+- Email:manelkhentoutmk@gmail.com
+<a href="https://github.com/manelkhentout">- Github.</a>
+<a href="https://www.linkedin.com/in/manel-khentout-226118161>- LinkedIn. </a>
   
 </body>
 </html>
