--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  Manel KHENTOUT
+  Welcome, Bienvenue !
   <style>
            body {
              color: black;
@@ -9,8 +9,9 @@
         </style>
   </head>
 <body>
+  <h1>Manel KHENTOUT</h1>
 - Tel: (+33)6-08-11-04 
-  Welcome, Bienvenue !
+ 
 - Email:manelkhentoutmk@gmail.com
 <a href="https://github.com/manelkhentout">- Github.</a>
 <a href="https://www.linkedin.com/in/manel-khentout-226118161>- LinkedIn. </a>
