--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   </head>
 <body>
   <h1>Manel KHENTOUT</h1>
-- Tel: (+33)6-08-11-04 
- 
-- Email:manelkhentoutmk@gmail.com
-<a href="https://github.com/manelkhentout">- Github.</a>
-<a href="https://www.linkedin.com/in/manel-khentout-226118161>- LinkedIn. </a>
-  
+  <ul>
+  <li> Tel: (+33)6-08-11-04 </li> 
+  <li> Email:manelkhentoutmk@gmail.com</li> 
+  <li> <a href="https://github.com/manelkhentout">- Github.</a></li> 
+  <li> <a href="https://www.linkedin.com/in/manel-khentout-226118161>- LinkedIn. </a></li> 
+  </ul> 
 </body>
 </html>
