--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <li> Tel: (+33)6-08-11-04 </li> 
   <li> Email:manelkhentoutmk@gmail.com</li> 
   <li> <a href="https://github.com/manelkhentout"> Github.</a></li> 
-  <li> <a href="https://www.linkedin.com/in/manel-khentout-226118161> LinkedIn. </a></li> 
+  <li> <a href="https://www.linkedin.com/in/manel-khentout-226118161"> LinkedIn. </a></li> 
   </ul> 
 </body>
 </html>
